--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f97bb5">  <td>19/02/08 19:46:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@5034c75a]">loginApp</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>19/02/10 00:26:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@26be92ad]">loginApp</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/02/10 00:26:22</td>   <td>-6256</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.automation.testCases.LoginTest@26be92ad]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/02/10 00:26:21</td>   <td>-7233</td> <td title="&gt;&gt;BaseClass.suitSetup()[pri:0, instance:com.automation.testCases.LoginTest@26be92ad]">&gt;&gt;suitSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/02/10 00:27:00</td>   <td>31431</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.automation.testCases.LoginTest@26be92ad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/02/10 00:27:00</td>   <td>31002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.automation.testCases.LoginTest@26be92ad]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="7e7986">  <td>19/02/10 00:27:01</td>   <td>32098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestcaseWithoutFramework.test1()[pri:0, instance:com.automation.testCases.TestcaseWithoutFramework@4c70fda8]">test1</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
 </table>
