--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abef66">  <td>19/02/09 16:24:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@7823a2f9]">loginApp</td> 
-  <td>main@1833638914</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>19/02/09 16:23:58</td>   <td>-11218</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.automation.testCases.LoginTest@7823a2f9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833638914</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>19/02/09 16:23:57</td>   <td>-12249</td> <td title="&gt;&gt;BaseClass.suitSetup()[pri:0, instance:com.automation.testCases.LoginTest@7823a2f9]">&gt;&gt;suitSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833638914</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>19/02/09 16:24:12</td>   <td>2234</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.automation.testCases.LoginTest@7823a2f9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833638914</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/02/10 02:16:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">loginApp</td> 
+  <td>main@1216590855</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/02/10 02:16:35</td>   <td>-5999</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/02/10 02:16:33</td>   <td>-7384</td> <td title="&gt;&gt;BaseClass.suitSetup()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&gt;&gt;suitSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/02/10 02:16:53</td>   <td>12343</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/02/10 02:16:52</td>   <td>11235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
 </table>
