--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dc63ce">  <td>19/02/11 11:46:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">loginApp</td> 
-  <td>main@1216590855</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/02/11 11:46:09</td>   <td>-8369</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/02/11 11:46:08</td>   <td>-9829</td> <td title="&gt;&gt;BaseClass.suitSetup()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&gt;&gt;suitSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/02/11 11:46:30</td>   <td>12924</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/02/11 11:46:29</td>   <td>11363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.automation.testCases.LoginTest@5c7fa833]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1216590855</td>   <td></td> </tr>
+<tr bgcolor="9f8bb1">  <td>19/11/06 18:18:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginApp()[pri:0, instance:com.automation.testCases.LoginTest@39c0f4a]">loginApp</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/11/06 18:17:47</td>   <td>-15826</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.automation.testCases.LoginTest@39c0f4a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/11/06 18:17:42</td>   <td>-20059</td> <td title="&gt;&gt;BaseClass.suitSetup()[pri:0, instance:com.automation.testCases.LoginTest@39c0f4a]">&gt;&gt;suitSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/11/06 18:18:10</td>   <td>7518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.automation.testCases.LoginTest@39c0f4a]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
 </table>
